--- a/views/historicalTeam.jade
+++ b/views/historicalTeam.jade
@@ -1,63 +1,10 @@
 extends layout
 
 block content
-	mixin player(player, position, properties)
-		-if(player != undefined)
-			tr(player_id=player.player_id)
-				td
-					-if(player.history[player.history_index].minor_leaguer)
-						| Minor Leaguer 
-					-else
-						-if(player.history_index == 0)
-							= player.fantasy_position
-						-else
-							= player.history[player.history_index].fantasy_position
-				td
-					= player.name_display_first_last
-				td
-					-if(!player.history[player.history_index].minor_leaguer)
-						= player.history[player.history_index].salary
-				td
-					= player.history[player.history_index].contract_year
-		-else
-			tr
-				td= position
-				td -
-				td
+	include partials/team
 
-	table(id='players_' + team.team)
-		thead
-			th Position
-			th Name
-			th Salary
-			th Contract Year
-		tbody
-			mixin player(players.catchers[0], 'C')
-			mixin player(players.catchers[1], 'C')
-			mixin player(players.first_base, '1B')
-			mixin player(players.second_base, '2B')
-			mixin player(players.third_base, '3B')
-			mixin player(players.shortstop, 'SS')
-			mixin player(players.middle_infield, '2B/SS')
-			mixin player(players.corner_infield, '1B/3B')
-			mixin player(players.outfielders[0], 'OF')
-			mixin player(players.outfielders[1], 'OF')
-			mixin player(players.outfielders[2], 'OF')
-			mixin player(players.outfielders[3], 'OF')
-			mixin player(players.outfielders[4], 'OF')
-			mixin player(players.utility, 'U')
-			mixin player(players.pitchers[0], 'P')
-			mixin player(players.pitchers[1], 'P')
-			mixin player(players.pitchers[2], 'P')
-			mixin player(players.pitchers[3], 'P')
-			mixin player(players.pitchers[4], 'P')
-			mixin player(players.pitchers[5], 'P')
-			mixin player(players.pitchers[6], 'P')
-			mixin player(players.pitchers[7], 'P')
-			mixin player(players.pitchers[8], 'P')
-			-if(players.dl != undefined)
-				-for(var i = 0; i < players.dl.length; i++)
-					mixin player(players.dl[i], 'DL')
-			-if(players.minor_leaguers != undefined)
-				-for(var i = 0; i < players.minor_leaguers.length; i++)
-					mixin player(players.minor_leaguers[i], 'MIN')
+	section(id="top")
+		h1= team.fullName
+		h2= year + " Roster"
+	section(id="left")
+		mixin team(players, false)
