--- a/views/vulture.jade
+++ b/views/vulture.jade
@@ -33,7 +33,7 @@ block content
 								-if(player.fantasy_team == user.team)
 									td
 										a(href="/gm/vulture/fix/" + player.player_id) Click to fix
-	section(id="left")
+	section(id="left" style="width:600px")
 		h2 Your Vulturable Players
 		table
 			thead
