--- a/public/css/master.css
+++ b/public/css/master.css
@@ -62,7 +62,6 @@ section#left {
 }
 section#right {
 	float: left;
-	width: 400px;
 	height: 100%;
 }
 
@@ -97,6 +96,7 @@ th.playerName {
 }
 td.number {
 	text-align: right;
+	margin-right:5px;
 }
 td.status {
 	text-align: center;
@@ -107,6 +107,12 @@ td, th {
 .smallNote {
 	font-size: 15px;
 }
+.name {
+	text-decoration: none;
+}
+.name:hover {
+	text-decoration: underline;
+}
 
 li.notification p{
 	display: inline;
@@ -115,4 +121,35 @@ li.notification p{
 li.notification p:nth-child(2) {
 	cursor: pointer;
 	padding-left:20px;
+}
+
+.box-table-a
+{
+	margin: 20px;
+	text-align: left;
+	border-collapse: collapse;
+}
+.box-table-a th
+{
+	padding: 8px;
+	background: #83838F;
+	border-top: 4px solid #83838F;
+	color: #039;
+}
+.box-table-a td
+{
+	padding: 2px 8px 2px 2px;	
+	background: #464658;
+	border-bottom: 1px solid gray;
+	border-top: 1px solid transparent;
+}
+.box-table-a tr:hover td
+{
+	background: #d0dafd;
+	color: black;
+}
+.box-table-a tr:hover a
+{
+	background: #d0dafd;
+	color: black;
 }
