--- a/views/vulture.jade
+++ b/views/vulture.jade
@@ -34,23 +34,24 @@ block content
 									td
 										a(href="/gm/vulture/fix/" + player.player_id) Click to fix
 	section(id="left" style="width:600px")
-		h2 Your Vulturable Players
-		table
-			thead
-				th Name
-				th Team
-				th.small ML Status
-				th.small Fantasy Status
-			tbody
-				-each player in vulturablePlayers
-					-if(player.fantasy_team == user.team)
-						tr
-							td= player.name_display_first_last
-							td= player.fantasy_team
-							td.status= player.status_code
-							td.status= player.fantasy_status_code
-							td
-								a(href="/gm/vulture/fix/" + player.player_id) Click to fix
+		-if(user)
+			h2 Your Vulturable Players
+			table
+				thead
+					th Name
+					th Team
+					th.small ML Status
+					th.small Fantasy Status
+				tbody
+					-each player in vulturablePlayers
+						-if(player.fantasy_team == user.team)
+							tr
+								td= player.name_display_first_last
+								td= player.fantasy_team
+								td.status= player.status_code
+								td.status= player.fantasy_status_code
+								td
+									a(href="/gm/vulture/fix/" + player.player_id) Click to fix
 	section(id="right")
 		h2 Leaguewide Vulturable Players
 		table
@@ -61,7 +62,7 @@ block content
 				th.small Fantasy Status
 			tbody
 				-each player in vulturablePlayers
-					-if(player.fantasy_team != user.team)
+					-if(!user || player.fantasy_team != user.team)
 						tr
 							td= player.name_display_first_last
 							td= player.fantasy_team
